fix: remove gap below homepage hero

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -26,7 +26,7 @@ html[data-theme='light'] h6 { color: var(--my-h6-color); }
   position: relative;
   left: 50%;
   right: 50%;
-  margin: 0 0 24px -50vw !important;
+  margin: 0 0 -36px -50vw !important;
   width: 100vw !important;
   max-width: 100vw !important;
   height: auto;
@@ -106,7 +106,7 @@ html[data-theme='light'] h6 { color: var(--my-h6-color); }
 
 @media (max-width: 900px) {
   .vp-home .vp-home-hero {
-    margin-bottom: 18px;
+    margin-bottom: -24px !important;
   }
 }
 
